Harden events reliability and evidence integrity